RESOLVED FIXED221529
[LFC][Integration] Fix http/wpt/css/css-highlight-api/ tests with inlines enabled
https://bugs.webkit.org/show_bug.cgi?id=221529
Summary [LFC][Integration] Fix http/wpt/css/css-highlight-api/ tests with inlines ena...
Antti Koivisto
Reported 2021-02-07 10:24:44 PST
Highlight painting code is currently tied to legacy line boxes. Disallow LFC.
Attachments
patch (3.62 KB, patch)
2021-02-07 10:29 PST, Antti Koivisto
ews-feeder: commit-queue-
Antti Koivisto
Comment 1 2021-02-07 10:29:02 PST
EWS
Comment 2 2021-02-07 11:03:47 PST
Committed r272473: <https://commits.webkit.org/r272473> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419540 [details].
Radar WebKit Bug Importer
Comment 3 2021-02-10 14:35:50 PST
Note You need to log in before you can comment on or make changes to this bug.