[LFC][Integration] Fix http/wpt/css/css-highlight-api/ tests with inlines enabled https://bugs.webkit.org/show_bug.cgi?id=221529

Reviewed by Zalan Bujtas.

Highlight painting code is currently tied to legacy line boxes. Disallow LFC.

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::printReason):
(WebCore::LayoutIntegration::canUseForLineLayoutWithReason):
* layout/integration/LayoutIntegrationCoverage.h:


Canonical link: https://commits.webkit.org/233787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272473 268f45cc-cd09-0410-ab3c-d52691b4dbfc